updates to MTG
